<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash_gradient"
    tools:context="me.mirosh.spiritualread.Auth.loginOnboard"
    android:orientation="vertical">
        <WebView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
                android:id="@+id/webView"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feature_Btn"
            android:textStyle="normal"
            android:textAllCaps="false"
            android:id="@+id/learnBtn"
            android:textColor="@color/md_white_1000"
            android:background="@drawable/shape_toolbar02"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:drawableStart="@drawable/baseline_help_24"

            />

        <Button
            android:id="@+id/langBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/tab_background_selected"
            android:drawableEnd="@drawable/ic_down_gray"
            android:drawableTint="@color/md_black_1000"
            android:padding="10dp"
            android:text="@string/lang_btn"
            android:textAllCaps="false"
            android:textColor="@color/md_black_1000"
            android:textStyle="normal"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_splash_gradient"
            android:gravity="center"
            android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:contentDescription="spritualread logo"
                    android:paddingBottom="0dp"
                    android:src="@drawable/ic_hello" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="30dp"
                    android:text="@string/login_onboard_body"
                    android:textAlignment="center"
                    android:textColor="@color/md_black_1000"
                    android:textSize="20sp"


                    />

                <Button
                    android:id="@+id/btn1"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:background="@drawable/shape_button01"
                    android:text="@string/login_btn"
                    android:textColor="@color/colorPrimary"

                    />

                <Button
                    android:id="@+id/btn3"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:background="@drawable/shape_button01"
                    android:text="@string/guest_btn"
                    android:textColor="@color/colorPrimary" />
        </LinearLayout>
</RelativeLayout>