<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash_gradient"
    tools:context="me.mirosh.spiritualread.activities.Request_Book">
    <!--   Toolbar -->

    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:background="@drawable/shape_toolbar01">

        <!--        back button -->
        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"

            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back_white" />

        <!--        Icon Image-->

        <ImageView
            android:id="@+id/iconIv"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@id/backBtn"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_hello" />

        <!--        title-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iconIv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="7dp"
            android:textColor="@color/md_white_1000"
            android:text="@string/request_book"
            android:textSize="28sp"
            />




    </RelativeLayout>
    <!--    Input Title-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titleTil"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="315dp"
        app:hintEnabled="false"
        >

        <EditText
            android:id="@+id/titleEt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shape_edittext01"
            android:drawableStart="@drawable/ic_pdf_gray"
            android:drawablePadding="10dp"
            android:hint="@string/request_book_title"
            android:padding="10dp"
            android:textColor="@color/md_black_1000"
            android:textColorHint="@color/light_grey"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--    Input Description-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/descriptionTil"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="5dp"
        app:hintEnabled="false"
        android:layout_below="@id/titleTil"
        >

        <EditText
            android:id="@+id/descriptionEt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shape_edittext01"
            android:drawableStart="@drawable/ic_pdf_gray"
            android:drawablePadding="10dp"
            android:hint="@string/request_book_author"
            android:inputType="textMultiLine|textCapSentences"
            android:padding="10dp"
            android:textColorHint="@color/light_grey"
            android:textColor="@color/md_black_1000"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <!--   Pick category from dialog-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/categoryTv"
        android:layout_below="@id/descriptionTil"
        android:layout_marginTop="5dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/shape_edittext01"
        android:drawableStart="@drawable/ic_category_gray"
        android:drawableEnd="@drawable/ic_down_gray"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:textColorHint="@color/light_grey"
        android:textColor="@color/md_black_1000"
        android:hint="@string/request_book_category"
        android:textSize="16sp"


        />

    <!--    Button upload pdf-->

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/categoryTv"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/md_white_1000"
        android:background="@drawable/shape_button01"
        android:text="@string/request_btn"
        android:id="@+id/submitBtn"/>
</RelativeLayout>