<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash_gradient"
    tools:context="me.mirosh.spiritualread.activities.ProfileEditActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/shape_toolbar01">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:src="@drawable/ic_back_white" />

        <TextView
            android:id="@+id/titleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/edit_profile"
            android:textColor="@color/md_white_1000"
            android:textSize="26sp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileIv"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@id/titleTv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@color/md_white_1000" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="225dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:id="@+id/nameTil"
            >

            <EditText
                android:id="@+id/nameEt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/shape_edittext01"
                android:drawableStart="@drawable/ic_person_white"
                android:drawablePadding="6dp"
                android:hint="@string/profile_edit_name"
                android:textColor="@color/md_black_1000"
                android:textColorHint="@color/md_blue_grey_500" />

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameTil"
            android:text="@string/update_btn"
            android:id="@+id/updateBtn"
            android:textColor="@color/md_white_1000"
            android:background="@drawable/shape_button01"
            />

    </RelativeLayout>


</RelativeLayout>