<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash_gradient"
    tools:context="me.mirosh.spiritualread.activities.ProfileActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/back02"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/shape_toolbar02"
        >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backBtn"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
           android:src="@drawable/ic_arrow_back_black_24dp"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:id="@+id/titleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/profile_heading"
            android:textColor="@color/md_white_1000" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profEditBtn"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_edit_white"
            android:layout_marginEnd="10dp"
            />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:background="@drawable/shape_rect01" />

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:background="@color/md_white_1000"
        android:id="@+id/profileIv"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileIv"
        android:text="Full Name"
        android:layout_marginTop="8dp"

        android:layout_centerHorizontal="true"
        android:textColor="@color/md_black_1000"
        android:textSize="18sp"

android:textStyle="bold"
        android:id="@+id/nameTv"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameTv"
        android:text="abc@example.com"
        android:layout_marginTop="8dp"

        android:layout_centerHorizontal="true"
        android:textColor="@color/md_black_1000"
        android:textSize="12sp"

        android:textStyle="bold"
        android:id="@+id/emailTv"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/detailLsLL"
        android:orientation="horizontal"
        android:layout_below="@id/emailTv"
     android:layout_marginTop="8dp"

        >
        <LinearLayout
           android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_account"
                android:textColor="@color/md_black_1000"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="N/A"
                android:id="@+id/accountType"
                android:textColor="@color/md_black_1000"
                android:textStyle="bold"
                />
        </LinearLayout>

        <LinearLayout
           android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_member"
                android:textColor="@color/md_black_1000"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="N/A"
                android:id="@+id/memberDateTv"
                android:textColor="@color/md_black_1000"
                android:textStyle="bold"
                />
        </LinearLayout>


    </LinearLayout>
    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/md_blue_grey_500"
        android:layout_below="@id/detailLsLL"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_favourite_books"
        android:layout_below="@id/view1"
        android:textSize="20sp"

        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:id="@+id/favouriteBookLable"
        android:textStyle="bold"
        android:textColor="@color/md_black_1000"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/booksRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/favouriteBookLable"
        android:layout_marginTop="17dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/row_pdf_favourite" />

</RelativeLayout>